--- a/corpdata-biz/src/main/resources/application-dev.yml
+++ b/corpdata-biz/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
   #---- redis设置   ----#
   redis:  
     database: 0
-    host: localhost
+    host: 192.168.1.188
     port: 6379
     password: 
     # 连接超时时间 单位 ms（毫秒）
