--- a/corpdata-biz/pom.xml
+++ b/corpdata-biz/pom.xml
@@ -65,6 +65,11 @@
             <version>2.5</version>
         </dependency>
         <dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>23.0</version>
@@ -80,12 +85,17 @@
 			<artifactId>nekohtml</artifactId>
 		</dependency>
 		
-		<!--MySQL JDBC驱动-->
+		<!-- JDBC驱动 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
+        </dependency>
 		
 		<!--MyBatis 及 插件依赖-->
         <dependency>
