增加调度任务能力(需完善).

--- a/corpdata-biz/src/main/resources/datasources.properties
+++ b/corpdata-biz/src/main/resources/datasources.properties
@@ -8,15 +8,15 @@ master.minIdle=5
 master.maxActive= 20
 master.maxWait= 60000
 
-# 其它数据库
-activiti.driverClassName=com.mysql.jdbc.Driver
-activiti.url=jdbc:mysql://localhost:3306/activiti?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
-activiti.username=root
-activiti.password=pass123
-activiti.initialSize=1
-activiti.minIdle=1
-activiti.maxActive= 10
-activiti.maxWait= 60000
+# quartz其它数据库
+quartz.driverClassName=com.mysql.jdbc.Driver
+quartz.url=jdbc:mysql://localhost:3306/quartz?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
+quartz.username=root
+quartz.password=pass123
+quartz.initialSize=1
+quartz.minIdle=1
+quartz.maxActive= 10
+quartz.maxWait= 60000
 
 # SqlServer
 sqlserver.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
