--- a/corpdata-biz/src/main/resources/quartz.properties
+++ b/corpdata-biz/src/main/resources/quartz.properties
@@ -1,6 +1,6 @@
 # 固定前缀org.quartz
 # 主要分为scheduler、threadPool、jobStore、plugin等部分
-# 参考：https://blog.csdn.net/u012907049/article/details/73801122
+# 
 org.quartz.scheduler.instanceName = DefaultQuartzScheduler
 org.quartz.scheduler.rmi.export = false
 org.quartz.scheduler.rmi.proxy = false
@@ -24,8 +24,8 @@ org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.tablePrefix = QRTZ_
 org.quartz.jobStore.dataSource = qzDS
 org.quartz.dataSource.qzDS.driver = com.mysql.jdbc.Driver
-org.quartz.dataSource.qzDS.URL = jdbc:mysql://190.0.1.88:3306/hello_test?useUnicode=true&characterEncoding=UTF-8
+org.quartz.dataSource.qzDS.URL = jdbc:mysql://localhost:3306/quartz?useUnicode=true&characterEncoding=UTF-8
 org.quartz.dataSource.qzDS.user = root
-org.quartz.dataSource.qzDS.password = root
+org.quartz.dataSource.qzDS.password = pass123
 org.quartz.dataSource.qzDS.maxConnections = 10
 
