--- a/corpdata-biz/pom.xml
+++ b/corpdata-biz/pom.xml
@@ -43,6 +43,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		<!-- 
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-devtools</artifactId>
+		</dependency> -->
 		
 		<!--常用库依赖-->
         <dependency>
