--- a/corpdata-biz/src/main/resources/config/properties/datasources.properties
+++ b/corpdata-biz/src/main/resources/config/properties/datasources.properties
@@ -1,8 +1,8 @@
 # 默认数据库
-master.driverClassName=com.mysql.jdbc.Driver
-master.url=jdbc:mysql://localhost:3306/mp_db?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
-master.username=root
-master.password=pass123
+master.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+master.url=jdbc:sqlserver://192.168.1.188:1433;DatabaseName=fd_dev_db
+master.username=sa
+master.password=1q2w3e4r
 master.initialSize=5
 master.minIdle=5
 master.maxActive= 20
