--- a/corpdata-biz/src/main/resources/config/properties/datasources.properties
+++ b/corpdata-biz/src/main/resources/config/properties/datasources.properties
@@ -1,8 +1,8 @@
 # 默认数据库
 master.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-master.url=jdbc:sqlserver://192.168.1.188:1433;DatabaseName=fd_dev_db
+master.url=jdbc:sqlserver://localhost:1433;DatabaseName=fd_dev_db
 master.username=sa
-master.password=1q2w3e4r
+master.password=pass123
 master.initialSize=5
 master.minIdle=5
 master.maxActive= 20
@@ -19,10 +19,10 @@ quartz.maxActive= 10
 quartz.maxWait= 60000
 
 # SqlServer
-sqlserver.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-sqlserver.url=jdbc:sqlserver://192.168.1.188:1433;DatabaseName=BPM
-sqlserver.username=sa
-sqlserver.password=1q2w3e4r
+sqlserver.driverClassName=com.mysql.jdbc.Driver
+sqlserver.url=jdbc:mysql://localhost:3306/mp_db?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
+sqlserver.username=root
+sqlserver.password=pass123
 sqlserver.initialSize=1
 sqlserver.minIdle=1
 sqlserver.maxActive= 10
