--- a/corpdata-biz/src/main/resources/config/properties/datasources.properties
+++ b/corpdata-biz/src/main/resources/config/properties/datasources.properties
@@ -1,6 +1,6 @@
 # 默认数据库
 master.driverClassName=com.mysql.jdbc.Driver
-master.url=jdbc:mysql://localhost:3306/mp_db?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
+master.url=jdbc:mysql://localhost:3306/space_db?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
 master.username=root
 master.password=pass123
 master.initialSize=5
