--- a/corpdata-biz/pom.xml
+++ b/corpdata-biz/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.13.RELEASE</version>
+		<version>2.0.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -85,10 +85,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.nekohtml</groupId>
-			<artifactId>nekohtml</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.9</version>
+        </dependency>
 		
 		<!-- JDBC驱动 -->
 		<dependency>
@@ -165,12 +166,12 @@
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
-			<version>1.2.5</version>
+			<version>1.4.0</version>
 		</dependency>
-		<dependency>
+        <dependency>
             <groupId>com.github.theborakompanioni</groupId>
             <artifactId>thymeleaf-extras-shiro</artifactId>
-            <version>1.2.1</version>
+            <version>2.0.0</version>
         </dependency>
 		
 		<!--Gson -->
@@ -213,7 +214,11 @@
 		  	<artifactId>okhttp</artifactId>
 		  	<version>3.9.1</version>
 		</dependency>
-		
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
 		<!-- easypoi(excel读写)
 		<dependency>
 		    <groupId>cn.afterturn</groupId>
