--- a/corpdata-biz/src/main/resources/config/application-dev.yml
+++ b/corpdata-biz/src/main/resources/config/application-dev.yml
@@ -19,15 +19,14 @@ spring:
     password: 
     # 连接超时时间 单位 ms（毫秒）
     timeout: 6000
-    # 连接池中的最大空闲连接，默认值也是8。
-    pool: 
-      max-idle: 10
-      #连接池中的最小空闲连接，默认值也是0。
-      min-idle: 0
-      # 如果赋值为-1，则表示不限制；如果pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)。
-      max-active: 10
-      # 等待可用连接的最大时间，单位毫秒，默认值为-1，表示永不超时。如果超过等待时间，则直接抛出JedisConnectionException
-      max-wait: -1
+    # 连接池配置
+    lettuce:
+      pool:
+        max-active: 10
+        max-wait: -1
+        max-idle: 8
+        #连接池中的最小空闲连接
+        min-idle: 0
   #---- 线程池配置 ----#
   task: 
     pool:
