数据源bean重复创建问题.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,56 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+src/main/java/com/corpdata/core/datasource/transaction/
+
+*.idea
+.idea/compiler.xml
+.idea/corpdata_seed.iml
+.idea/encodings.xml
+.idea/libraries/Maven__c3p0_c3p0_0_9_1_1.xml
+.idea/libraries/Maven__com_alibaba_druid_1_1_10.xml
+.idea/libraries/Maven__com_alibaba_druid_spring_boot_starter_1_1_10.xml
+.idea/libraries/Maven__com_alibaba_fastjson_1_2_47.xml
+.idea/libraries/Maven__com_fasterxml_classmate_1_3_4.xml
+.idea/libraries/Maven__com_github_jsqlparser_jsqlparser_0_9_5.xml
+.idea/libraries/Maven__com_github_pagehelper_pagehelper_4_2_1.xml
+.idea/libraries/Maven__com_google_code_findbugs_jsr305_1_3_9.xml
+.idea/libraries/Maven__com_google_errorprone_error_prone_annotations_2_0_18.xml
+.idea/libraries/Maven__com_google_guava_guava_23_0.xml
+.idea/libraries/Maven__com_google_j2objc_j2objc_annotations_1_1.xml
+.idea/libraries/Maven__com_microsoft_sqlserver_sqljdbc4_4_0.xml
+.idea/libraries/Maven__com_squareup_okhttp3_okhttp_3_9_1.xml
+.idea/libraries/Maven__com_squareup_okio_okio_1_13_0.xml
+.idea/libraries/Maven__com_vaadin_external_google_android_json_0_0_20131108_vaadin1.xml
+.idea/libraries/Maven__commons_configuration_commons_configuration_1_10.xml
+.idea/libraries/Maven__commons_fileupload_commons_fileupload_1_3_3.xml
+.idea/libraries/Maven__commons_io_commons_io_2_5.xml
+.idea/libraries/Maven__commons_lang_commons_lang_2_6.xml
+.idea/libraries/Maven__commons_logging_commons_logging_1_1_1.xml
+.idea/libraries/Maven__junit_junit_4_12.xml
+.idea/libraries/Maven__mysql_mysql_connector_java_5_1_46.xml
+.idea/libraries/Maven__net_sf_ezmorph_ezmorph_1_0_6.xml
+.idea/libraries/Maven__net_sf_json_lib_json_lib_jdk15_2_4.xml
+.idea/libraries/Maven__org_apache_commons_commons_lang3_3_6.xml
+.idea/libraries/Maven__org_apache_geronimo_specs_geronimo_j2ee_management_1_1_spec_1_0_1.xml
+.idea/libraries/Maven__org_apache_httpcomponents_httpclient_4_5_5.xml
+.idea/libraries/Maven__org_apache_httpcomponents_httpcore_4_4_9.xml
+.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_core_8_5_31.xml
+.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_el_8_5_31.xml
+.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_websocket_8_5_31.xml
+.idea/libraries/Maven__org_apache_velocity_velocity_1_7.xml
+.idea/libraries/Maven__org_aspectj_aspectjweaver_1_8_13.xml
+.idea/libraries/Maven__org_codehaus_mojo_animal_sniffer_annotations_1_14.xml
+.idea/libraries/Maven__org_fusesource_hawtbuf_hawtbuf_1_11.xml
+.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+.idea/libraries/Maven__org_hamcrest_hamcrest_library_1_3.xml
+.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_3_2_Final.xml
+.idea/libraries/Maven__org_quartz_scheduler_quartz_2_2_3.xml
+.idea/libraries/Maven__org_slf4j_jul_to_slf4j_1_7_25.xml
+.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25.xml
+.idea/libraries/Maven__org_springframework_retry_spring_retry_1_2_2_RELEASE.xml
+.idea/libraries/Maven__xml_apis_xml_apis_1_4_01.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+corpdata-biz/src/main/java/com/corpdata/core/datasource/transaction/
