--- a/corpdata-biz/src/main/resources/config/application-dev.yml
+++ b/corpdata-biz/src/main/resources/config/application-dev.yml
@@ -22,10 +22,13 @@ spring:
     # 连接池配置
     lettuce:
       pool:
+        # 连接池最大连接数（使用负值表示没有限制） 默认 8
         max-active: 10
+        # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
         max-wait: -1
+        # 连接池中的最大空闲连接 默认 8
         max-idle: 8
-        #连接池中的最小空闲连接
+        # 连接池中的最小空闲连接 默认 0
         min-idle: 0
   #---- 线程池配置 ----#
   task: 
