--- a/corpdata-biz/src/main/resources/config/application-dev.yml
+++ b/corpdata-biz/src/main/resources/config/application-dev.yml
@@ -42,5 +42,9 @@ logging:
 queueName: queue.mail
 topicName: topic.pub
   
-
+# 数据库路径配置
+properties:
+  path:
+    datasources: config/properties/datasources.properties
+    quartz: config/properties/quartz.properties
     
