--- a/corpdata-app/src/main/resources/datasources.properties
+++ b/corpdata-app/src/main/resources/datasources.properties
@@ -9,6 +9,16 @@ master.maxActive= 30
 master.maxWait= 60000
 
 # 其它数据库
+bpm.driverClassName=com.mysql.jdbc.Driver
+bpm.url=jdbc:mysql://localhost:3306/bpm_dd?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+bpm.username=root
+bpm.password=pass123
+bpm.initialSize=5
+bpm.minIdle=5
+bpm.maxActive= 30
+bpm.maxWait= 60000
+
+# 其它数据库
 sqlserver.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver.url=jdbc:sqlserver://192.168.1.188:1433;DatabaseName=BPM
 sqlserver.username=sa
