--- a/corpdata-app/pom.xml
+++ b/corpdata-app/pom.xml
@@ -96,6 +96,11 @@
             <version>1.3.3</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>23.0</version>
