--- a/corpdata-app/src/main/resources/application.yml
+++ b/corpdata-app/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 
 spring:
 
+  activemq:
+    broker-url: tcp://47.104.241.41:61616
+    #mq账户密码
+    user: admin
+    password: pass123
+
   cache:
     type: redis
   #---- redis配置  ----#
