--- a/corpdata-app/src/main/resources/datasources.properties
+++ b/corpdata-app/src/main/resources/datasources.properties
@@ -1,8 +1,8 @@
 # 默认数据库
 master.driverClassName=com.mysql.jdbc.Driver
-master.url=jdbc:mysql://47.104.241.41:3306/cpda_app_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+master.url=jdbc:mysql://localhost:3306/cpda_app_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 master.username=root
-master.password=Pass123.com
+master.password=pass123
 master.initialSize=5
 master.minIdle=5
 master.maxActive= 30
