--- a/corpdata-app/pom.xml
+++ b/corpdata-app/pom.xml
@@ -170,6 +170,18 @@
             <artifactId>activemq-pool</artifactId>
         </dependency>
 
+        <!-- protostuff -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
