--- a/corpdata-app/src/main/resources/application.yml
+++ b/corpdata-app/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 
-server:
-  port: 8081
-
 spring:
+  # 选择加载不同环境的配置文件
+  profiles:
+    active: dev
+    include: data
 
   activemq:
     broker-url: tcp://47.104.241.41:61616
@@ -12,27 +13,7 @@ spring:
 
   cache:
     type: redis
-  #---- redis配置  ----#
-  redis:
-    database: 0
-    host: localhost
-    port: 6379
-    password:
-    jedis:
-      pool:
-        #最大连接数据库连接数,设 0 为没有限制
-        max-active: 8
-        #最大等待连接中的数量,设 0 为没有限制
-        max-idle: 8
-        #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
-        max-wait: -1ms
-        #最小等待连接中的数量,设 0 为没有限制
-        min-idle: 0
-      lettuce:
-        pool:
-          max-active: 8
-          max-idle: 8
-          max-wait: -1ms
-          min-idle: 0
-        shutdown-timeout: 100ms
+
+
+
 
